* albums list pricce alignment fixed
Former-commit-id: 5666b3df916458b132ae5aea1f77b4a040b035d5
Former-commit-id: f65e9e9520b8956058e05e3404577c7980813464

--- a/PVT.Q1.2017.Shop/PVT.Q1.2017.Shop/Content/tracks.css
+++ b/PVT.Q1.2017.Shop/PVT.Q1.2017.Shop/Content/tracks.css
@@ -305,7 +305,6 @@ li > input { width: 100% }
 
 .albums-list > ul > li img {
     float: left;
-    /*margin: 15px 15px 90px 15px;*/
     max-width: 100px;
     max-height: 100px;
     overflow: auto;
@@ -365,7 +364,7 @@ li > input { width: 100% }
 .albums-list .btn-align {
     vertical-align: top;
     text-align: right;
-    margin: 5px 0 0 60px;
+    margin: 20px 0 0 60px;
 }
 
 .albums-list .btn-align i {
